Used Base64 class for encoding/decoding messages (#1152)
Removed Jakarta dependency not using DataTypeConverter anymore

Signed-off-by: Paolo Patierno <ppatierno@live.com>