@@ -17,9 +17,9 @@ import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.header.internals.RecordHeader;
 import org.apache.kafka.common.header.internals.RecordHeaders;
 
-import javax.xml.bind.DatatypeConverter;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 
 /**
@@ -58,7 +58,7 @@ public class HttpTextMessageConverter implements MessageConverter<byte[], byte[]
             if (json.has("headers")) {
                 ArrayNode jsonArray = (ArrayNode) json.get("headers");
                 for (JsonNode jsonObject : jsonArray) {
-                    headers.add(new RecordHeader(jsonObject.get("key").asText(), DatatypeConverter.parseBase64Binary(jsonObject.get("value").asText())));
+                    headers.add(new RecordHeader(jsonObject.get("key").asText(), Base64.getDecoder().decode(jsonObject.get("value").asText())));
                 }
             }
             if (json.has("partition")) {
@@ -113,7 +113,7 @@ public class HttpTextMessageConverter implements MessageConverter<byte[], byte[]
                 ObjectNode header = JsonUtils.createObjectNode();
 
                 header.set("key", new TextNode(kafkaHeader.key()));
-                header.put("value", DatatypeConverter.printBase64Binary(kafkaHeader.value()));
+                header.put("value", Base64.getEncoder().encodeToString(kafkaHeader.value()));
                 headers.add(header);
             }
             if (!headers.isEmpty()) {
